--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apexcharts": "^3.28.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-css-donut-chart": "^1.3.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
